force-app/main/default/objects/echosign_dev1__Layer_Template__c/echosign_dev1__Layer_Template__c.object-meta.xml
<CustomObject>
    <label>Add Form Field Template</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Add Form Field Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Add Form Field Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>