force-app/main/default/objects/echosign_dev1__Layer_Template__c/fields/echosign_dev1__Document_Keys__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Document_Keys__c</fullName>
    <label>Document Keys</label>
    <length>255</length>
    <type>Text</type>
</CustomField>