force-app/main/default/objects/echosign_dev1__Layer_Template__c/fields/echosign_dev1__Document_Names__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Document_Names__c</fullName>
    <label>Layer Document Names</label>
    <length>255</length>
    <type>Text</type>
</CustomField>